# near-burrow

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: audit.yml  build.yml  ci.yml  release.yml
scripts/: install.sh
src/: cli.rs  lib.rs  main.rs  multisig.rs  utils.rs
src/api/: claim.rs  deposit.rs  list.rs  mod.rs  register.rs  withdraw.rs
src/commands/: claim.rs  deposit.rs  list.rs  mod.rs  register.rs  withdraw.rs
