[package]
name = "near-burrow"
description = "Near CLI extension for interacting with Burrow"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/aurora-is-near/near-burrow"
license = "CC0-1.0"
readme = "README.md"
keywords = ["cli", "near", "burrow"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.4", features = ["derive"] }
reqwest = { version = "~0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
