[package]
name = "near-burrow"
description = "Near CLI extension for interacting with Burrow"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/aurora-is-near/near-burrow"
license = "CC0-1.0"
readme = "README.md"
keywords = ["cli", "near", "burrow"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.4", features = ["derive"] }
reqwest = { version = "~0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.21"
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
base64 = "0.22.1"

[build-dependencies]
clap = { version = "~4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clap_mangen = "0.2.20"
